# mini-c

./: Cargo.toml  Makefile  README.md  build.rs  file.c  minicio.c
components/mini-c-ast/: Cargo.toml
components/mini-c-ast/src/: lib.rs
components/mini-c-common/: Cargo.toml
components/mini-c-common/src/: lib.rs  utils.rs
components/mini-c-error/: Cargo.toml
components/mini-c-error/src/: binary_operation.rs  lalrpop.rs  lib.rs
components/mini-c-lexer/: Cargo.toml
components/mini-c-lexer/src/: lib.rs
components/mini-c-llvm-codegen/: Cargo.toml
components/mini-c-llvm-codegen/src/: builtins.ll  builtins.rs  lib.rs
components/mini-c-parser/: Cargo.toml
components/mini-c-parser/src/: lib.rs  mini_c_grammar.lalrpop
components/sushi-ast/: Cargo.toml
components/sushi-common/: Cargo.toml
components/sushi-error/: Cargo.toml
components/sushi-interpreter/: Cargo.toml
components/sushi-lexer/: Cargo.toml
components/sushi-parser/: Cargo.toml
components/sushi-parser/src/: lib.rs  sushi_grammar.lalrpop
examples/: TODO-minicio.c  array_iteration.c  break.c  call_single_print.c  chained_functions.c  coins.c  conds.c  easy.c  factorial.c  fib.c  fibonacci.c  file_1.c  file_2.c  if-error.c  if-pass.c  increment_function.c  operators.c  queen.c  simple_if.c  simple_while.c  var.c  var_loop.c  while.c
scripts/: clear-snapshots.sh
scripts/git_hooks/: pre-commit
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  sushi_grammar.lalrpop
tests/: ui.rs
tests/snapshots/: ui__arithmetic_expression.snap  ui__empty_program.snap  ui__empty_statements.snap  ui__example_break-2.snap  ui__example_break.snap  ui__example_coins-2.snap  ui__example_coins.snap  ui__example_conds-2.snap  ui__example_conds.snap  ui__example_easy-2.snap  ui__example_easy.snap  ui__example_fib-2.snap  ui__example_fib.snap  ui__example_file_1-2.snap  ui__example_file_1.snap  ui__example_file_2-2.snap  ui__example_file_2.snap  ui__example_if_pass-2.snap  ui__example_if_pass.snap  ui__example_operators-2.snap  ui__example_operators.snap  ui__example_queen-2.snap  ui__example_queen.snap  ui__example_var-2.snap  ui__example_var.snap  ui__example_var_loop-2.snap  ui__example_var_loop.snap  ui__example_while-2.snap  ui__example_while.snap  ui__file_1.snap  ui__file_2.snap  ui__integer_comparisons.snap  ui__missing_trailing_semi_colon.snap  ui__print_calls.snap  ui__store_variable_value.snap  ui__undefined_variable.snap  ui__unfinished_arithmetic_expression.snap
(+19 files in other folders)
