[workspace]
members = [".", "components/*"]

[package]
name = "sushi"
version = "0.1.0"
edition = "2021"

[dependencies]
sushi-parser = { path = "components/sushi-parser" }
sushi-lexer = { path = "components/sushi-lexer" }
sushi-ast = { path = "components/sushi-ast" }
sushi-common = { path = "components/sushi-common" }
sushi-interpreter = { path = "components/sushi-interpreter" }
lalrpop-util = { version = "0.19.8", default-features = false }

[dev-dependencies]
insta = "1.21.0"
unindent = "0.1.10"

# Speed up tests
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
unindent = { opt-level = 3 }
