[workspace]
members = [
    ".",
    "components/mini-c-ast",
    "components/mini-c-lexer",
    "components/mini-c-parser",
]

[package]
name = "mini-c"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
mini-c-parser = { path = "components/mini-c-parser" }
mini-c-lexer = { path = "components/mini-c-lexer" }
mini-c-ast = { path = "components/mini-c-ast" }

[dev-dependencies]
insta = { version = "1.21.0", features = ["ron", "csv", "json", "toml", "yaml"] }
fs-err = "2.9.0"
unindent = "0.1.10"

# Speed up tests
[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
