[package]
name = "mini-c-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-c-lexer = { path = "../mini-c-lexer" }
mini-c-ast = { path = "../mini-c-ast" }
lalrpop-util = { version = "0.19.8", default-features = false }

[build-dependencies]
lalrpop = { version = "0.19.8", default-features = false }
